css/media.css
@media handheld, screen and (max-width: 1400px) {
	#portTitle
	{
		font-size:300%;
	}
}

@media handheld, screen and (max-width: 1300px) {
   #planets1{max-width:60%;}
   #planets2{padding-bottom:0%;}

}
/* Change features as page size decreases*/
@media handheld, screen and (max-width: 1190px) {

  body {
   /* color: gray;*/
  }
  .headtext
  {
    padding-right: 45%;
  }
 
	#portTitle
	{
		font-size:250%;
		margin-top:2%;
	}
	
   .titleP
  {
    font-size: 350%;
    top: 1%;
  }
  #titleF
  {
    font-size: 300%;
    top: 3%;
  }
  #titleW
  {
    font-size: 300%;
    top: 3%;
  }
   .logo{max-width: 3%;}
   #flight8{max-width:80%;}


}
@media handheld, screen and (max-width: 1025px) {

  body {
    /*color: turquoise;*/
  }
  .header
  {
    font-size: 130%;
  }
  
	#portTitle
	{
		font-size:200%;
		margin-top:3%;
	}
  
  .titlepic
  {
    margin-top: -6%;
  }
  #titleF
  {
    font-size: 275%;
    top: 3%;
  }
  .logo{max-width: 3%;}

  #pad
  {
    padding-top: 0%;
  }
  #iamUNI
  {
    margin-bottom: 0%;
  }
}
@media handheld, screen and (max-width: 900px) {

  body {
    font-size: 95%;
    /*color: yellow;*/
  }
  .headtext
  {
    padding-right: 40%;
  }

}
@media handheld,screen and (max-width: 850px) {

  body {
    font-size: 92%;
    /*color: green;*/
  }

}
@media handheld,screen and (max-width: 800px) {

  body {
    font-size: 90%;
   /* color: blue;*/
  }
  .iam{top: 23%;}
  .title{top: 20%;}
  .portpad{padding-right: 2%;}
  .logo{max-width: 3%;}
  .back{max-width:150%;}

}
@media handheld,screen and (max-width: 750px) {

  body {
    font-size: 87%;
   /* color: pink;*/
  }
  
  .math	{ font-size:80%;}

}
@media handheld,screen and (max-width: 700px) {

  body {
    font-size: 85%;
    /*color: purple;*/
  }
  .iam{top: 20%;}
  .title{top: 18%;}
  .headtext
  {
    padding-right: 36%;
  }
  #wind {padding-left: 2%;}

   .titleP
  {
    font-size: 300%;
    top: 1%;
  }
  #titleF
  {
    font-size: 250%;
    top: 3%;
  }
  #titleW
  {
    font-size: 250%;
    top: 3%;
  }

}
@media handheld,screen and (max-width: 650px) {

  body {
    font-size: 82%;
    /*color: red;*/
  }

}
@media handheld,screen and (max-width: 600px) {
  html {overflow-x:hidden;}
  body {
    font-size: 80%;
    overflow-x:hidden;
    /*color: orange;*/
  }

  .cont
  {
    max-width: 100%;
  }

  .column
  {
    align-self: stretch;
  }

  .col
  {
    -webkit-column-count: 1;
    -moz-column-count: 1; 
    column-count: 1;
    
  }
  
  .titleP
  {
    margin-top: 10%;
  }
  
  #portpic1, #portpic2, #portpic3, #portpic4, #portpic5, #portpic6{max-width: 100%;}
  
  #portTitle
  {
	  font-size:350%;
	  /* text-align:center; */
  }
  
  #portgap1, #portgap2, #portgap3
  {
	  display:block;
  }

	.boxP {padding-top:2%;}

   .about
  {
    padding-top: 0%;
  }
  .about2
  {
    padding-top: 0%;
  }
  .space{ padding-bottom: 0%; }

  .iam{top: 21%;}
  
  .title
  {
      top: 20%;
      font-size: 320%;
  }

  .headtext
  {
    padding-right: 30%;
  }

  .portpics,.portpicsx {max-width: 100%; -webkit-box-reflect:unset;}
  .cent
  {
    font-size: 175%;
    padding-bottom: 20%;
  }
  .cents
  {
	  font-size: 175%;
	 padding-bottom: 25%;
  }

}
@media handheld,screen and (max-width: 550px) {

  body {
    font-size: 80%;
    /*color: pink;*/
  }
  #portTitle
  {
	  margin-top:5%;
  }
  .iam{top: 18%;}  
  .title
  {
    top: 17%;
    font-size: 320%;
  }
 
  .header {
    padding: 5px 20px 5px 40px;
  }

  .headtext
  {
    padding-right: 25%;
  }
  
  .math	{ font-size:70%;}
  
  .flightAlign 
	{
		padding-right: 0%;
		padding-top:2%;		
		display:block;
	}
	.flight1,.flight2 { max-width: 80%;}
	#flight4,#flight5,#flight6,#flight7,#winds2,#robot9, #trax, #auto2 , #autocad, #planets1, #planets4, #planets5{
		max-width: 80%;
		padding-bottom:0%;
	}
	
	#forces,#winds,#winds3,#fridge1,#fridge2,#fridge3,#fridge4,#fridge5,#fridge6,#robot1,#robot2,#robot3,#robot4,#robot5,#robot6,#robot7, #trax2, #mac2, #mac3
	{	
		max-width: 60%;
		padding-left: 0%;
		padding-top: 0%;
		padding-right: 0%;
	}
	#winds3,#fridge5,#fridge6, #mac{ max-width: 40%;}
	#mac3{	display:none;}
	

}
@media handheld,screen and (max-width: 497px) {

  body {
    font-size: 80%;
    /*color: maroon;*/
  }

  .iam{top: 12%;} 
  .title
  {
      top: 12%;
      font-size: 320%;
  }

  .header {
  padding: 5px 40px 5px 40px;
  }

   .titleP
  {
    font-size: 250%;
    top: 1%;
  }
  #titleF
  {
    font-size: 200%;
    top: 3%;
  }
  #titleW
  {
    font-size: 200%;
    top: 3%;
  }
  .logo{max-width: 3%;}
  
  /* new */
  .iam
  {
    padding-top: 1%;
    padding-bottom:0%;
  }
  #iamUNI
  {
    margin-bottom: 0%;
  }

  .back
  {
    /* max-width: auto; */
    max-width: 200%;
  }

  .col
  {
    display: inline;
  }

  .column
  {
    width: 100%;
  }
  .middlepic
  {
    display: none;
  }
  
  .title
  {
      padding-top: 1%;
      font-size: 260%;
  }

  .titlepics
  {
    width: 60%;
  }
	
	.logo{max-width: 5%;}
	.math{ font-size:60%;}
}
@media handheld,screen and (max-width: 449px) {
.headtext
  {
    padding-right: 12%;
  }
}
@media handheld,screen and (max-width: 430px) {

  body {
    font-size: 80%;
   /* color: cyan;*/
  }

  .title
  {
      padding-top: 1%;
      font-size: 260%;
  }

  .titlepics
  {
    width: 60%;
  }

  .header {
  font-size: 125%;
  padding: 5px 20px 5px 40px;
  }
  .logo{max-width: 5%;}

  .cent{padding-bottom: 17%;}

  .titleP
  {
    font-size: 350%;
    margin-top: 10%;
    margin-bottom: 5%;
    padding-left: 3%;
  }
  
  #modThree {padding-right:10%;}

  #titleF
  {
    font-size: 200%;
    margin-top: 10%;
    margin-bottom: 5%;
    padding-left: 3%;
  }
  #titleW
  {
    font-size: 200%;
    margin-top: 10%;
    margin-bottom: 5%;
    padding-left: 3%;
  }
 

  .iam
  {
    padding-top: 1%;
    padding-bottom:0%;
  }
  #iamUNI
  {
    margin-bottom: 0%;
  }

  .back
  {
    /* max-width: auto; */
    max-width: 200%;
  }

  .col
  {
    display: inline;
  }

  .column
  {
    width: 100%;
  }
  .middlepic
  {
    display: none;
  }
	.math{ font-size:50%;}
	#flight8{max-width:100%;}
	
	
}
@media handheld,screen and (max-width: 380px) {

  .header {
    font-size: 120%;
  }
  
  #portTitle
  {
	  /* font-size:250%; */
	  margin-top:8%;
  }
  #titleF {font-size: 175%;}
  
  .iam
  {
    padding-top: 0%;
    padding-bottom:0%;
  }
  #iamUNI
  {
    margin-bottom: 0%;
  }
	#modThree {font-size:250%;}
	
	.boxP {margin-right:-1%;}
	.box {margin-right:-1%;}
	.math{ font-size:40%;}
}
@media handheld,screen and (max-width: 326px) {

.title
{
  font-size: 200%;
}
.math{ font-size:30%;}



}

